; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/lockd/extr_xdr.c_nlmsvc_decode_notify.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/lockd/extr_xdr.c_nlmsvc_decode_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rqst = type { i32 }
%struct.nlm_args = type { i32, %struct.nlm_lock }
%struct.nlm_lock = type { i32, i32 }

@NLM_MAXSTRLEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nlmsvc_decode_notify(%struct.svc_rqst* %0, i32* %1, %struct.nlm_args* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.svc_rqst*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.nlm_args*, align 8
  %8 = alloca %struct.nlm_lock*, align 8
  store %struct.svc_rqst* %0, %struct.svc_rqst** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.nlm_args* %2, %struct.nlm_args** %7, align 8
  %9 = load %struct.nlm_args*, %struct.nlm_args** %7, align 8
  %10 = getelementptr inbounds %struct.nlm_args, %struct.nlm_args* %9, i32 0, i32 1
  store %struct.nlm_lock* %10, %struct.nlm_lock** %8, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load %struct.nlm_lock*, %struct.nlm_lock** %8, align 8
  %13 = getelementptr inbounds %struct.nlm_lock, %struct.nlm_lock* %12, i32 0, i32 1
  %14 = load %struct.nlm_lock*, %struct.nlm_lock** %8, align 8
  %15 = getelementptr inbounds %struct.nlm_lock, %struct.nlm_lock* %14, i32 0, i32 0
  %16 = load i32, i32* @NLM_MAXSTRLEN, align 4
  %17 = call i32* @xdr_decode_string_inplace(i32* %11, i32* %13, i32* %15, i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %30

20:                                               ; preds = %3
  %21 = load i32*, i32** %6, align 8
  %22 = getelementptr inbounds i32, i32* %21, i32 1
  store i32* %22, i32** %6, align 8
  %23 = load i32, i32* %21, align 4
  %24 = call i32 @ntohl(i32 %23)
  %25 = load %struct.nlm_args*, %struct.nlm_args** %7, align 8
  %26 = getelementptr inbounds %struct.nlm_args, %struct.nlm_args* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load %struct.svc_rqst*, %struct.svc_rqst** %5, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @xdr_argsize_check(%struct.svc_rqst* %27, i32* %28)
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %20, %19
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32* @xdr_decode_string_inplace(i32*, i32*, i32*, i32) #1

declare dso_local i32 @ntohl(i32) #1

declare dso_local i32 @xdr_argsize_check(%struct.svc_rqst*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
